libcc2rs-macros/tests/ui/forbidden.stderr
error: goto!() can only be used inside goto_block!
  --> tests/ui/forbidden.rs:18:5
   |
18 |     goto!('nowhere);
   |     ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `goto` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0268]: `continue` outside of a loop
  --> tests/ui/forbidden.rs:9:5
   |
 9 | /     switch!(match 0 {
10 | |         0 => { v = 1; continue; }
11 | |         _ => { v = 2; }
12 | |     });
   | |______^ cannot `continue` outside of a loop
   |
   = note: this error originates in the macro `switch` (in Nightly builds, run with -Z macro-backtrace for more info)
